--- a/root/index.html
+++ b/root/index.html
@@ -5,24 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <header class="flex">
+    <header class="flex distribuida centradah borde">
       <img src="./img/Logo Manage F Blanco.png" alt="Logo Manage" />
-      <nav class="menu flex">
-        <ul type="none">
-          <li><a href="#">Pricing</a></li>
-          <li><a href="#">Product</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Careers</a></li>
-          <li><a href="#">Community</a></li>
+      <nav class="borde">
+        <ul type="none" class="flex distribuida borde">
+          <li><a href="#" class="sinLinea">Pricing</a></li>
+          <li><a href="#" class="sinLinea">Product</a></li>
+          <li><a href="#" class="sinLinea">About Us</a></li>
+          <li><a href="#" class="sinLinea">Careers</a></li>
+          <li><a href="#" class="sinLinea">Community</a></li>
         </ul>
       </nav>
-      <button class="boton">
+      <button class="boton borde">
         <a href="http://www.aceiteselia.com.ar">Get Started</a>
       </button>
     </header>
-    <main class="flex">
+    <main>
       <section class="flex">
         <div class="flex">
           <h1>Bring everyone together to build better products.</h1>
@@ -40,7 +47,7 @@
       </section>
       <section class="flex">
         <div class="flex">
-          <h2>What´s different about Manage?</h2>
+          <h2>What's different about Manage?</h2>
           <p>
             Manage provides all the functionality your teas needs, without the
             complexity. Our software is tailor-made for modern digital product
@@ -85,23 +92,23 @@
       </section>
     </main>
     <aside class="flex">
-        <h3>What they´ve said</h3>
+        <h3>What they've said</h3>
         <section class="flex">
             <!-- TODO: Perguntar por el nombre de los avatars -->
             <article>
                 <img src="./img/avatar-anisha.png" alt="Imagen UX 1">
                 <h5>Anisha Yay</h5>
-                <p>“Manage has supercharged our team´s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”</p>
+                <p>“Manage has supercharged our team's workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”</p>
             </article>
             <article>
                 <img src="./img/avatar-ali.png" alt="Imagen UX 1">
                 <h5>Ali Bravo</h5>
-                <p>“Manage has supercharged our team´s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”</p>
+                <p>“We have been able to cancel so many other subscriptions since using manage. There ir no more cross-channel confusion and everyone is much more focused.”</p>
             </article>
             <article>
                 <img src="./img/avatar-richard.png" alt="Imagen UX 1">
                 <h5>Richard Gere</h5>
-                <p>“Manage has supercharged our team´s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”</p>
+                <p>“Manage allows us to provide structure and process. It keeps us organized and focused. I can't stop recommending them to everyone i talk to!”</p>
             </article>
         </section>
         <button class="boton">
