Header listo, creo, a revisar

--- a/root/index.html
+++ b/root/index.html
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <header class="flex distribuida centradah borde">
+    <header class="flex distribuida centradah">
       <img src="./img/Logo Manage F Blanco.png" alt="Logo Manage" />
-      <nav class="borde">
-        <ul type="none" class="flex distribuida borde">
+      <nav>
+        <ul type="none" class="flex distribuida">
           <li><a href="#" class="sinLinea">Pricing</a></li>
           <li><a href="#" class="sinLinea">Product</a></li>
           <li><a href="#" class="sinLinea">About Us</a></li>
@@ -25,7 +25,7 @@
           <li><a href="#" class="sinLinea">Community</a></li>
         </ul>
       </nav>
-      <button class="boton borde">
+      <button class="boton">
         <a href="http://www.aceiteselia.com.ar">Get Started</a>
       </button>
     </header>
