CSS primera parte del Main

--- a/root/index.html
+++ b/root/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300;400;500;600;700;800;900;1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
@@ -25,65 +25,65 @@
           <li><a href="#" class="sinLinea">Community</a></li>
         </ul>
       </nav>
-      <button class="boton">
+      <button class="boton sombra">
         <a href="http://www.aceiteselia.com.ar">Get Started</a>
       </button>
     </header>
-    <main>
-      <section class="flex">
-        <div class="flex">
+    <main class="borde">
+      <section class="flex distribuida primera">
+        <div class="flex columna izquierdo distribuida">
           <h1>Bring everyone together to build better products.</h1>
-          <p>
+          <p class="bajadah1">
             Manage makes it simple for software teams to plan day-to-day tasks
             while keeping the large team goals in view
           </p>
-          <button class="boton">
+          <button class="boton borde">
             <a href="http://www.aceiteselia.com.ar">Get Started</a>
           </button>
         </div>
-        <div class="flex">
+        <div class="flex derecho">
           <img src="./img/Ilustracion.png" alt="Cuadro Estadístico" />
         </div>
       </section>
       <section class="flex">
-        <div class="flex">
-          <h2>What's different about Manage?</h2>
-          <p>
+        <div class="flex columna izquierdo">
+          <h2 class="borde">What's different about Manage?</h2>
+          <p class="borde bajadah2">
             Manage provides all the functionality your teas needs, without the
             complexity. Our software is tailor-made for modern digital product
             teams
           </p>
-        </div class="flex">
-        <section>
-            <article class="flex">
-                <p>
+        </div>
+        <section class="borde">
+            <article class="flex borde">
+                <p class="borde">
                     01
-                </p>
-                <div>
-                    <h4>Track company-wide progress</h4>
-                    <p>
+                </p class="borde">
+                <div class="borde diferencias">
+                    <h4 class="borde">Track company-wide progress</h4>
+                    <p class="borde">
                         See how your day-to-day tasks fit into the wider vision. Go from tracking progress at the milestone level all the way done to the smallest of details. Never lose sight of the bigger picture again.
                     </p>
                     </div>
             </article>
-            <article class="flex">
-                <p>
+            <article class="flex borde">
+                <p class="borde">
                     02
                 </p>
-                <div>
-                    <h4>Advance built-in reports</h4>
-                    <p>
+                <div class="borde diferencias">
+                    <h4 class="borde">Advance built-in reports</h4>
+                    <p class="borde">
                         Set internal delivery estimates and track progress toward company goals. Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.
                     </p>
                     </div>
             </article>
-            <article class="flex">
-                <p>
+            <article class="flex borde">
+                <p class="borde">
                     03
                 </p>
-                <div>
-                    <h4>Everything you need in one place</h4>
-                    <p>
+                <div class="borde diferencias">
+                    <h4 class="borde">Everything you need in one place</h4>
+                    <p class="borde">
                         Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one team productivity solution.
                     </p>
                     </div>
