La mitad de la segunda parte

--- a/root/index.html
+++ b/root/index.html
@@ -46,9 +46,9 @@
         </div>
       </section>
       <section class="flex">
-        <div class="flex columna izquierdo">
-          <h2 class="borde">What's different about Manage?</h2>
-          <p class="borde bajadah2">
+        <div class="flex columna alineado">
+          <h2 class>What's different about Manage?</h2>
+          <p class="bajadah2">
             Manage provides all the functionality your teas needs, without the
             complexity. Our software is tailor-made for modern digital product
             teams
