Todo menos el footer en 480

--- a/root/index.html
+++ b/root/index.html
@@ -13,153 +13,175 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="./css/style.css">
   </head>
+  <!-- Nota: Inicio del Body -->
   <body>
-    <header class="flex distribuida centradah">
-      <img src="./img/Logo Manage F Blanco.png" alt="Logo Manage" />
-      <nav>
-        <ul type="none" class="flex distribuida">
-          <li><a href="#" class="sinLinea">Pricing</a></li>
-          <li><a href="#" class="sinLinea">Product</a></li>
-          <li><a href="#" class="sinLinea">About Us</a></li>
-          <li><a href="#" class="sinLinea">Careers</a></li>
-          <li><a href="#" class="sinLinea">Community</a></li>
-        </ul>
-      </nav>
-      <button class="boton sombra">
-        <a href="http://www.aceiteselia.com.ar">Get Started</a>
-      </button>
+  <!-- Nota: Inicio del Header -->
+    <header class="flex ancho">
+      <div class="flex distribuida centradah">
+        <img src="./img/Logo Manage F Blanco.png" alt="Logo Manage" />
+        <nav>
+          <ul type="none" class="flex distribuida">
+            <li><a href="#" class="sinLinea">Pricing</a></li>
+            <li><a href="#" class="sinLinea">Product</a></li>
+            <li><a href="#" class="sinLinea">About Us</a></li>
+            <li><a href="#" class="sinLinea">Careers</a></li>
+            <li><a href="#" class="sinLinea">Community</a></li>
+          </ul>
+        </nav>
+        <button class="boton sombra">Get Started
+        </button>
+        <i class="fa-solid fa-bars hmenu"></i>
+      </div>
     </header>
-    <main class="borde">
-      <section class="flex distribuida primera">
+    <!-- Nota: Inicio del Main -->
+    <main class="ancho">
+      <!-- Nota: Primer Parte del Main -->
+      <section class="flex distribuida primera centradah">
+        <!-- Nota: Izquierda -->  
         <div class="flex columna izquierdo distribuida">
           <h1>Bring everyone together to build better products.</h1>
           <p class="bajadah1">
             Manage makes it simple for software teams to plan day-to-day tasks
             while keeping the large team goals in view
           </p>
-          <button class="boton borde">
-            <a href="http://www.aceiteselia.com.ar">Get Started</a>
+          <button class="boton">
+            Get Started
           </button>
         </div>
+      <!-- Nota: Derecha -->
         <div class="flex derecho">
-          <img src="./img/Ilustracion.png" alt="Cuadro Estadístico" />
+          <img src="./img/Ilustracion.png" alt="Cuadro Estadístico" class="imagcel"/>
         </div>
       </section>
-      <section class="flex">
-        <div class="flex columna alineado">
-          <h2 class>What's different about Manage?</h2>
+      <!-- Nota: Segunda Parte del Main -->
+      <section class="flex colcel">
+      <!-- Nota: Izquierda -->
+        <div class="flex columna alineado izquierdo2">
+          <h2>What's different about Manage?</h2>
           <p class="bajadah2">
             Manage provides all the functionality your teas needs, without the
             complexity. Our software is tailor-made for modern digital product
             teams
           </p>
         </div>
-        <section class="borde">
-            <article class="flex borde">
-                <p class="borde">
+      <!-- Nota: Derecha -->
+        <section class="flex columna">
+            <article class="flex">
+                <p class="flex numero centro">
                     01
-                </p class="borde">
-                <div class="borde diferencias">
-                    <h4 class="borde">Track company-wide progress</h4>
-                    <p class="borde">
+                </p>
+                <div class="ancho1">
+                   <h4>Track company-wide progress</h4>
+                   <p class="textoDif">
                         See how your day-to-day tasks fit into the wider vision. Go from tracking progress at the milestone level all the way done to the smallest of details. Never lose sight of the bigger picture again.
-                    </p>
-                    </div>
+                   </p>
+                 </div>
             </article>
-            <article class="flex borde">
-                <p class="borde">
+            <article class="flex">
+                <p class="flex numero centro">
                     02
                 </p>
-                <div class="borde diferencias">
-                    <h4 class="borde">Advance built-in reports</h4>
-                    <p class="borde">
+                <div class="ancho1">
+                  <h4>Advance built-in reports</h4>
+                  <p class="textoDif">
                         Set internal delivery estimates and track progress toward company goals. Our customisable dashboard helps you build out the reports you need to keep key stakeholders informed.
-                    </p>
-                    </div>
+                   </p>
+                </div>
             </article>
-            <article class="flex borde">
-                <p class="borde">
+            <article class="flex">
+                <p class="flex numero centro">
                     03
                 </p>
-                <div class="borde diferencias">
-                    <h4 class="borde">Everything you need in one place</h4>
-                    <p class="borde">
+                <div class="ancho1">
+                  <h4>Everything you need in one place</h4>
+                  <p class="textoDif">
                         Stop jumping from one service to another to communicate, store files, track tasks and share documents. Manage offers an all-in-one team productivity solution.
-                    </p>
-                    </div>
+                  </p>
+                  </div>
             </article>
         </section>
       </section>
     </main>
-    <aside class="flex">
-        <h3>What they've said</h3>
-        <section class="flex">
-            <!-- TODO: Perguntar por el nombre de los avatars -->
-            <article>
-                <img src="./img/avatar-anisha.png" alt="Imagen UX 1">
-                <h5>Anisha Yay</h5>
-                <p>“Manage has supercharged our team's workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”</p>
-            </article>
-            <article>
-                <img src="./img/avatar-ali.png" alt="Imagen UX 1">
-                <h5>Ali Bravo</h5>
-                <p>“We have been able to cancel so many other subscriptions since using manage. There ir no more cross-channel confusion and everyone is much more focused.”</p>
-            </article>
-            <article>
-                <img src="./img/avatar-richard.png" alt="Imagen UX 1">
-                <h5>Richard Gere</h5>
-                <p>“Manage allows us to provide structure and process. It keeps us organized and focused. I can't stop recommending them to everyone i talk to!”</p>
-            </article>
-        </section>
-        <button class="boton">
-            <a href="http://www.aceiteselia.com.ar">Get Started</a>
-          </button>
-        <div class="flex">
-            <h6>Simplify hoy your team
-                words today.</h6>
-            <button class="boton"><a href="http://www.aceiteselia.com.ar">Get Started</a>
-            </button>
+    <!-- Nota: Aca empieza el Aside -->
+    <aside class="flex columna ancho centro">
+      <h3>What they've said</h3>
+      <section class="flex distribuida person">
+        <article class="flex columna avatars fantom">
+          <img class="rostro" src="./img/avatar-anisha.png" alt="Imagen UX 1">
+          <h5>Anisha Yay</h5>
+          <p class="comentario">“Manage has supercharged our team's workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated.”</p>
+        </article>
+        <article class="flex columna avatars">
+          <img class="rostro" src="./img/avatar-ali.png" alt="Imagen UX 2">
+          <h5>Ali Bravo</h5>
+          <p class="comentario ancho 1">“We have been able to cancel so many other subscriptions since using manage. There ir no more cross-channel confusion and everyone is much more focused.”</p>
+        </article>
+        <article class="flex columna avatars fantom">
+          <img class="rostro" src="./img/avatar-richard.png" alt="Imagen UX 3">
+          <h5>Richard Gere</h5>
+          <p class="comentario">“Manage allows us to provide structure and process. It keeps us organized and focused. I can't stop recommending them to everyone i talk to!”</p>
+        </article>
+       </section>
+       <button class="boton opacidad">Get Started
+            
+       </button>
+      <div class="flex separada centradah ancho alto colcel altocel">
+        <div class="margen">
+          <h6>Simplify how your team
+        works today.</h6>
         </div>
+        <div class="margen">
+          <button class="botonBlanco botoncel">Get Started</a>
+          </button>
+        </div>
+      </div>
     </aside>
-    <footer class="flex">
-        <section>
+    <!-- Nota: Aca empieza el footer -->
+    <footer class="ancho flex centradah distribuida">
+      <div class="margenFooter flex separada ultimoDiv centradah">
+        <section class="flex columna distribuida footer1">
             <a href="./index.html"><img src="./img/Logo Manage F Negro.png" alt="LOGO Manage"></a>
-            <nav class="flex redes">
-                <a href="https://www.facebook.com/"><img src="./img/FACEBOOK.png" alt="Logo Facebook"></a>
-                <a href="https://www.youtube.com/"><img src="./img/YOUTUBE.png" alt="Logo Youtube"></a>
-                <a href="https://twitter.com/"><img src="./img/TWITTER.png" alt="Logo Twitter"></a>
-                <a href="https://www.pinterest.com/"><img src="./img/PINTEREST.png" alt="Logo Pinterest"></a>
-                <a href="https://www.instagram.com/"><img src="./img/INSTAGRAM.png" alt="Logo Instagram"></a>
+            <nav class="flex">
+                <a class="margenRedes" href="https://www.facebook.com/"><img src="./img/FACEBOOK.png" alt="Logo Facebook"></a>
+                <a class="margenRedes" href="https://www.youtube.com/"><img src="./img/YOUTUBE.png" alt="Logo Youtube"></a>
+                <a class="margenRedes" href="https://twitter.com/"><img src="./img/TWITTER.png" alt="Logo Twitter"></a>
+                <a class="margenRedes" href="https://www.pinterest.com/"><img src="./img/PINTEREST.png" alt="Logo Pinterest"></a>
+                <a class="margenRedes" href="https://www.instagram.com/"><img src="./img/INSTAGRAM.png" alt="Logo Instagram"></a>
             </nav>
         </section>
-        <section>
-            <nav class="menu flex">
-                <ul type="none">
-                  <li><a href="./index.html">Home</a></li>
-                  <li><a href="#">Pricing</a></li>
-                  <li><a href="#">Product</a></li>
-                  <li><a href="#">About Us</a></li>
+        <div class="flex distribuida margenNavs">
+          <section class="flex">
+            <nav class="flex centradah">
+                <ul class="flex columna separada alto1" type="none">
+                  <li><a class="menuFoot" href="./index.html">Home</a></li>
+                  <li><a class="menuFoot" href="#">Pricing</a></li>
+                  <li><a class="menuFoot" href="#">Product</a></li>
+                  <li><a class="menuFoot" href="#">About Us</a></li>
                 </ul>
             </nav>
-        </section>
-        <section>
-            <nav class="menu flex">
-                <ul type="none">
-                  <li><a href="#">Careers</a></li>
-                  <li><a href="#">Community</a></li>
-                  <li><a href="#">Privacy Policy</a></li>
+          </section>
+          <section class="flex ">
+            <nav class="flex centradah">
+                <ul class="flex columna separada alto1" type="none">
+                  <li><a class="menuFoot" href="#">Careers</a></li>
+                  <li><a class="menuFoot" href="#">Community</a></li>
+                  <li><a class="menuFoot" href="#">Privacy Policy</a></li>
+                  <li><a class="menuFoot cuarto" href="#">Cuarto</a></li>
                 </ul>
             </nav>
-        </section>
-        <section>
-            <form action="./registro/" method="post"></form>
-                <label for="email"></label>
-                <input type="email" name="email" id="email" placeholder="Update in your inbox...">
-                <button type="submit">Go</button>
-            <p>Copyright 2020. All Rights Reserved</p>
+          </secclass="formulario"tion>
+        </div>
+        <section class="margen2 flex columna separada alto1 alizq2">
+            <div class="flex alizq">
+              <form action="./registro/" method="post"></form>
+                  <label for="email"></label>
+                  <input class="formulario" type="email" name="email" id="email" placeholder="   Update in your inbox...">
+              <button class="buttonGo" type="submit">Go</button>
+            </div>
+            <p class="copy">Copyright 2020. All Rights Reserved</p>
 
         </section>
-
+      </div>
     </footer>
   </body>
 </html>
