Primer Sitio WEB Completo de mi vida

--- a/root/index.html
+++ b/root/index.html
@@ -44,7 +44,7 @@
             Manage makes it simple for software teams to plan day-to-day tasks
             while keeping the large team goals in view
           </p>
-          <button class="boton">
+          <button class="boton sombra">
             Get Started
           </button>
         </div>
@@ -114,7 +114,7 @@
         <article class="flex columna avatars">
           <img class="rostro" src="./img/avatar-ali.png" alt="Imagen UX 2">
           <h5>Ali Bravo</h5>
-          <p class="comentario ancho 1">“We have been able to cancel so many other subscriptions since using manage. There ir no more cross-channel confusion and everyone is much more focused.”</p>
+          <p class="comentario anchocel">“We have been able to cancel so many other subscriptions since using manage. There ir no more cross-channel confusion and everyone is much more focused.”</p>
         </article>
         <article class="flex columna avatars fantom">
           <img class="rostro" src="./img/avatar-richard.png" alt="Imagen UX 3">
@@ -122,7 +122,7 @@
           <p class="comentario">“Manage allows us to provide structure and process. It keeps us organized and focused. I can't stop recommending them to everyone i talk to!”</p>
         </article>
        </section>
-       <button class="boton opacidad">Get Started
+       <button class="boton sombra opacidad">Get Started
             
        </button>
       <div class="flex separada centradah ancho alto colcel altocel">
@@ -131,17 +131,16 @@
         works today.</h6>
         </div>
         <div class="margen">
-          <button class="botonBlanco botoncel">Get Started</a>
+          <button class="botonBlanco reflejo botoncel">Get Started</a>
           </button>
         </div>
       </div>
     </aside>
-    <!-- Nota: Aca empieza el footer -->
-    <footer class="ancho flex centradah distribuida">
-      <div class="margenFooter flex separada ultimoDiv centradah">
-        <section class="flex columna distribuida footer1">
-            <a href="./index.html"><img src="./img/Logo Manage F Negro.png" alt="LOGO Manage"></a>
-            <nav class="flex">
+    <footer class="ancho flex centradah distribuida altfoot">
+      <div class="margenFooter flex separada ultimoDiv centradah footerColum">
+        <section class="flex columna distribuida logocel footer1 footerColum">
+            <a class="logo" href="./index.html"><img src="./img/Logo Manage F Negro.png" alt="LOGO Manage"></a>
+            <nav class="flex districel">
                 <a class="margenRedes" href="https://www.facebook.com/"><img src="./img/FACEBOOK.png" alt="Logo Facebook"></a>
                 <a class="margenRedes" href="https://www.youtube.com/"><img src="./img/YOUTUBE.png" alt="Logo Youtube"></a>
                 <a class="margenRedes" href="https://twitter.com/"><img src="./img/TWITTER.png" alt="Logo Twitter"></a>
@@ -169,14 +168,14 @@
                   <li><a class="menuFoot cuarto" href="#">Cuarto</a></li>
                 </ul>
             </nav>
-          </secclass="formulario"tion>
+          </section>
         </div>
         <section class="margen2 flex columna separada alto1 alizq2">
             <div class="flex alizq">
               <form action="./registro/" method="post"></form>
                   <label for="email"></label>
-                  <input class="formulario" type="email" name="email" id="email" placeholder="   Update in your inbox...">
-              <button class="buttonGo" type="submit">Go</button>
+                  <input class="formulario reflejo" type="email" name="email" id="email" placeholder="   Update in your inbox...">
+              <button class="buttonGo reflejo" type="submit">Go</button>
             </div>
             <p class="copy">Copyright 2020. All Rights Reserved</p>
 
